--- a/#src/scss/layout/container.scss
+++ b/#src/scss/layout/container.scss
@@ -1,12 +1,9 @@
 .container {
   width: 100%;
-  max-width: 1200px;
-  height: 100%;
+  max-width: 1800px;
+  //height: 100%;
   margin: 0 auto;
-
-  @media (max-width: 1200px) and (min-width: 421px) {
-    padding: 0 20px;
-  }
+  padding: 0 20px;
 
   @media (max-width: 420px) {
     padding: 0 10px;
