--- a/#src/components/base/_burger-menu.html
+++ b/#src/components/base/_burger-menu.html
@@ -1,77 +1,43 @@
-<div class="overlay">
-    <div class="swipe-menu__container">
-        <div class="swipe-line" data-swipe-threshold="20" data-swipe-timeout="500" data-swipe-ignore="false">
+<div class="swipe-menu__container" data-swipe-threshold="20" data-swipe-timeout="500" data-swipe-ignore="false">
+    <nav class="accordion" aria-label="navigation-accordion">
+        <div class="accordion__section">
+            <div class="accordion__header">Компания</div>
+            <ul class="accordion__body">
+                <li><a href="about.html">О нас</a></li>
+                <li><a href="map.html">Схема проезда</a></li>
+                <li><a href="details.html">Реквизиты</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
+            </ul>
         </div>
-        <nav class="accordion" aria-label="navigation-accordion">
-            <div class="accordion__section">
-                <div class="accordion__header">Компания</div>
-                <ul class="accordion__body">
-                    <li><a href="about.html">О нас</a></li>
-                    <li><a href="map.html">Схема проезда</a></li>
-                    <li><a href="details.html">Реквизиты</a></li>
-                    <li><a href="contacts.html">Контакты</a></li>
-                </ul>
-            </div>
-            <div class="accordion__section">
-                <div class="accordion__header">Услуги</div>
-                <ul class="accordion__body">
-                    <li><a href="colocation.html">Размещение сервера</a></li>
-                    <li><a href="dedicated.html">Аренда сервера </a></li>
-                    <li><a href="software.html">Программное обеспечение</a></li>
-                    <li><a href="email.html">HataMail</a></li>
-                    <li><a href="other.html">Другие услуги</a></li>
-                </ul>
-            </div>
-            <div class="accordion__section">
-                <div class="accordion__header">Клиентам</div>
-                <ul class="accordion__body">
-                    <li><a href="instruction.html">Как разместить сервер</a></li>
-                    <li><a href="payments.html">Способы оплаты</a></li>
-                    <li><a href="support.html">Техническая поддержка</a></li>
-                    <li><a href="document.html">Документы</a></li>
-                    <li><a href="visited.html">Правила посещения дата-центра</a></li>
-                </ul>
-            </div>
-            <div class="accordion__section">
-                <div class="accordion__header">Инфо</div>
-                <ul class="accordion__body">
-                    <li><a href="review.html">Отзывы</a></li>
-                    <li><a href="partners.html">Партнерская программа</a></li>
-                </ul>
-            </div>
-            <div class="horizontal-line"></div>
-        </nav>
-        <div class="swipe-menu__contacts">
-            <p class="swipe-menu__title">Продажи и обслуживание клиентов</p>
-            <div class="swipe-menu__buttons">
-                <a class="button-circle button-circle_bordered" href="mailto:sales@datahata.by">
-                    <img alt="mail" src="img/header/icons/mail.svg" width="26" height="26">
-                </a>
-                <a class="button-circle button-circle_bordered swipe-menu__button-phone" href="tel:+375293086666">
-                    <img src="img/header/icons/phone-down.svg" alt="phone-a1" width="32" height="17">
-                    <span>A1</span>
-                </a>
-                <a class="button-circle button-circle_bordered swipe-menu__button-phone" href="tel:+375333086666">
-                    <img src="img/header/icons/phone-down.svg" alt="phone-mts" width="32" height="17">
-                    <span>MTC</span>
-                </a>
-            </div>
-            <p class="swipe-menu__title">Техническая поддержка 24/7</p>
-            <div class="swipe-menu__buttons">
-                <a class="button-circle button-circle_bordered" href="https://t.me/datahata_support_bot">
-                    <img src="img/header/icons/telegram.svg" alt="telegram" width="24" height="24"></a>
-                <a class="button-circle button-circle_bordered" href="mailto:help@datahata.by">
-                    <img src="img/header/icons/mail.svg" alt="mail" width="26" height="26"></a>
-                <a class="button-circle button-circle_bordered swipe-menu__button-phone" href="tel:+375293096666">
-                    <img src="img/header/icons/phone-down.svg" alt="phone-a1" width="32" height="17">
-                    <span>A1</span>
-                </a>
-                <a class="button-circle button-circle_bordered swipe-menu__button-phone" href="tel:+375333096666">
-                    <img src="img/header/icons/phone-down.svg" alt="phone-mts" width="32" height="17">
-                    <span>MTC</span>
-                </a>
-            </div>
+        <div class="accordion__section">
+            <div class="accordion__header">Услуги</div>
+            <ul class="accordion__body">
+                <li><a href="colocation.html">Размещение сервера</a></li>
+                <li><a href="dedicated.html">Аренда сервера </a></li>
+                <li><a href="software.html">Программное обеспечение</a></li>
+                <li><a href="email.html">HataMail</a></li>
+                <li><a href="other.html">Другие услуги</a></li>
+            </ul>
         </div>
-        <a class="button button_colored swipe-menu__button" href="https://my.datahata.by/"><span>Войти в аккаунт</span></a>
-    </div>
+        <div class="accordion__section">
+            <div class="accordion__header">Клиентам</div>
+            <ul class="accordion__body">
+                <li><a href="instruction.html">Как разместить сервер</a></li>
+                <li><a href="payments.html">Способы оплаты</a></li>
+                <li><a href="support.html">Техническая поддержка</a></li>
+                <li><a href="document.html">Документы</a></li>
+                <li><a href="visited.html">Правила посещения дата-центра</a></li>
+            </ul>
+        </div>
+        <div class="accordion__section">
+            <div class="accordion__header">Инфо</div>
+            <ul class="accordion__body">
+                <li><a href="review.html">Отзывы</a></li>
+                <li><a href="partners.html">Партнерская программа</a></li>
+            </ul>
+        </div>
+    </nav>
+    <span class="horizontal-line"></span>
+    <a class="custom-button-brand" href="https://my.datahata.by/">Войти в аккаунт</a>
 </div>
+
