--- a/#src/scss/base/accordion.scss
+++ b/#src/scss/base/accordion.scss
@@ -2,35 +2,47 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 0.7rem;
+  padding: 22px 0;
 
   .accordion__section {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap:4px;
   }
 
   .accordion__header {
-    position: relative;
-    padding: 15px;
-    user-select: none;
-    font-size: 1.8rem;
-    cursor: pointer;
-
-    @media (max-width: 420px) {
-      padding: 10px;
-    }
-
-    &::after {
-      content: "";
-      background-image: url("../img/icons/Vector1.svg");
-      background-repeat: no-repeat;
-      background-position: center;
-      height: 16px;
-      width: 16px;
-      display: inline-block;
-      vertical-align: middle;
-    }
+    width: 100%;
+    display: flex;
+    height: 44px;
+    padding: 6px 12px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 32px;
+    border: 1px solid rgba(255, 255, 255, 0.30);
+    background:  #FFF;
+    box-shadow: 0 0 16px 4px rgba(0, 0, 0, 0.10) inset;
+    //position: relative;
+    //padding: 15px;
+    //user-select: none;
+    //font-size: 1.8rem;
+    //cursor: pointer;
+    //
+    //@media (max-width: 420px) {
+    //  padding: 10px;
+    //}
+    //
+    //&::after {
+    //  content: "";
+    //  background-image: url("../img/icons/Vector1.svg");
+    //  background-repeat: no-repeat;
+    //  background-position: center;
+    //  height: 16px;
+    //  width: 16px;
+    //  display: inline-block;
+    //  vertical-align: middle;
+    //}
   }
 
   .accordion__body {
@@ -43,7 +55,8 @@
     }
 
     &_open{
-      max-height: 136px;
+      max-height: 160px;
+      padding: 10px 0;
     }
 
     li {
