--- a/#src/scss/base/base.scss
+++ b/#src/scss/base/base.scss
@@ -67,11 +67,11 @@ h4 {
 
 .main {
   width: 100%;
-  margin-top: 75px;
+  margin-top: 100px;
 
-  @media (max-width: 420px) {
-    margin-top: 60px;
-  }
+  //@media (max-width: 420px) {
+  //  margin-top: 60px;
+  //}
 }
 
 .section-padding {
@@ -204,6 +204,7 @@ h4 {
 
 .hm-main{
   background: $hm-bg;
+  margin-top: 0;
 }
 
 
