--- a/#src/scss/base/burger-menu.scss
+++ b/#src/scss/base/burger-menu.scss
@@ -1,115 +1,40 @@
-.overlay {
-  position: fixed;
-  top: 60px;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  overflow: auto;
-  transition: all 0.5s linear;
-  visibility: hidden;
-
-  @media (min-width: 1024px) {
-    display: none;
-  }
-
-  @media (min-width: 421px) {
-    top: 75px;
-  }
-
-  &_active {
-    visibility: visible;
-  }
-}
 
 .swipe-menu__container {
   width: 100%;
-  padding: 10px 20px 100px;
   position: absolute;
-  top: 100%;
+  padding: 60px 22px 22px;
+  top: 0;
   left: 0;
-  z-index: 100;
+  z-index: -1;
   display: flex;
   flex-direction: column;
   align-items: center;
   background: $color-light;
-  border-radius: 20px 20px 0 0;
-  transition: all 0.5s linear;
-  visibility: visible;
+  visibility: hidden;
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+  border-radius: 24px;
+  box-shadow: 0 0 16px 4px rgba(0, 0, 0, 0.10) inset;
+  transition: max-height 0.5s ease, opacity 0.5s ease, visibility 0.5s;
 
+  &_active {
+    visibility: visible;
+    opacity: 1;
+    max-height: 700px;
+  }
 
   @media (min-width: 1024px) {
-   min-height: 0;
+    min-height: 0;
     display: none;
   }
 
-}
-
-
-
-.horizontal-line {
-  width: 100%;
-  height: 1px;
-  background-color: rgba(238, 238, 238, 1);
-  margin: 10px 0;
-
-}
-
-.swipe-line {
-  width: 100%;
-  height: 35px;
-  position: relative;
-  user-select: none;
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 106px;
-    height: 4px;
-    background-color: rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
+  .horizontal-line {
+    width: 100%;
+    height: 1px;
+    background-color: rgba(238, 238, 238, 1);
+    margin: 0 0 22px;
   }
-}
-.swipe-menu__contacts {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  row-gap: 1.78rem;
 
 }
 
-.swipe-menu__buttons {
-  display: flex;
-  column-gap: 10px;
-  margin-bottom: 20px;
-  align-items: center;
-
-}
-
-.swipe-menu__title{
-  @include font($size: 1.6rem);
-}
-
-
-
-.swipe-menu__button {
-  margin-top: 2.5rem;
-
-  @media (max-width: 420px) {
-    margin-top: 1.5rem;
-  }
-}
-
-.swipe-menu__button-phone{
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  span{
-    display: block;
-    font-size: 12px;
-  }
-}
