--- a/#src/scss/components/main/promo.scss
+++ b/#src/scss/components/main/promo.scss
@@ -8,13 +8,14 @@
   background-size: cover;
   background-position: 100% 100%;
   background-color: transparent;
+  margin-top: -100px;
 
   @media (max-width: 1025px) {
     padding: 173px 0 254px;
   }
 
   @media (max-width: 420px) {
-    padding: 113px 0 173px;
+    padding: 173px 0;
     background-image: url(../img/promo/bgmobail.jpg);
 
   }
