--- a/#src/scss/base/fonts.scss
+++ b/#src/scss/base/fonts.scss
@@ -1,2 +1,3 @@
 @include font-style("futura-pt", "futura-pt-bold", "700", "normal");
 @include font-style("futura-pt", "futura-pt-book", "400", "normal");
+@include font-style("inter", "Inter-Regular", "400", "normal");
