--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -18,13 +18,13 @@
 @import "./base/table";
 @import "./base/calculator";
 @import "./base/calculator-configurator";
+@import "./base/contactModal";
 
 
 //layout
 @import "./layout/container";
 @import "./layout/header";
 @import "./layout/footer";
-@import "./layout/footer-mob";
 @import "layout/columns";
 
 //components
