--- a/#src/scss/base/header-navigation.scss
+++ b/#src/scss/base/header-navigation.scss
@@ -34,6 +34,37 @@
 }
 
 .navigation__menu {
+
+  & > span{
+    border-radius: 8px;
+    border: 1px solid rgba(0, 0, 0, 0.05);
+    padding: 6px 12px;
+
+    &::after {
+      content: "";
+      background-image: url("../img/icons/Vector1.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+      height: 16px;
+      width: 16px;
+      margin-left: 5px;
+      display: inline-block;
+      vertical-align: middle;
+    }
+
+    @include hover {
+      &:hover {
+        background-color: black;
+        color: rgba(255, 255, 255, 0.90);
+
+        &::after {
+          filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(1) contrast(1);
+        }
+      }
+    }
+  }
+
+
   color: $color-dark;
   cursor: pointer;
   @include font($size: 1.8rem, $weight: 400);
@@ -42,23 +73,6 @@
     @include font($size: 1.4rem, $weight: 400);
   }
 
-  @include hover {
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-
-  &::after {
-    content: "";
-    background-image: url("../img/icons/Vector1.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 16px;
-    width: 16px;
-    margin-left: 5px;
-    display: inline-block;
-    vertical-align: middle;
-  }
 }
 
 .navigation__menu-sub {
