--- a/#src/scss/layout/footer.scss
+++ b/#src/scss/layout/footer.scss
@@ -1,52 +1,170 @@
 .footer {
-    background-color: $color-secondary;
-    padding-top: 3.9rem;
-    padding-bottom: 3.5rem;
+  font-family: inter, serif;
+  &__container{
+    height: 500px;
+    margin: 3.9rem auto;
+    border-radius: 64px;
+    background: #000;
+    box-shadow: 0 0 64px 4px rgba(255, 255, 255, 0.90) inset;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-    @media (max-width: 1023px) {
-        display: none;
+    @media (max-width: 500px) {
+      height: 677px;
+    }
+  }
+
+
+  &__text-logo{
+    @media (min-width: 1250px) {
+      display: inline-block;
     }
 
+    display: none;
+  }
 
-    .footer__title {
-        color: $color-light;
-        @include font($size:2rem, $weight: 700);
-        margin-bottom: 2.2rem;
+
+  &__top {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px;
+    flex-grow: 1;
+    width: 100%;
+
+    @media (min-width: 1250px) {
+      padding: 30px 60px;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+
+  &__bottom {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 20px;
+
+    & > a {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
+  &__nav {
+    height: 396px;
+    flex-grow: 1;
+    background-image: url("../img/footer/logo-bg.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    @media (max-width: 500px) {
+      width: 100%;
     }
 
+  }
 
-    .footer__info {
-        margin-bottom: 1.5rem;
-        color: $color-light;
 
-        p {
-            margin-bottom: 0.28rem;
+  &__content {
+    display: flex;
+    align-items: flex-start;
+    gap: 120px;
+
+    @media (max-width: 600px) {
+      gap: 30px;
+    }
+
+    @media (max-width: 500px) {
+      flex-direction: column;
+      gap: 120px;
+    }
+  }
+
+  &__title {
+    color: #FFF;
+    font-variant-numeric: lining-nums proportional-nums;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 28px;
+    letter-spacing: -0.48px;
+  }
+
+
+  .footer__text {
+    color: rgba(255, 255, 255, 0.80);
+    font-variant-numeric: lining-nums proportional-nums;
+    @include font($style: normal, $weight: 400, $size: 12px, $height: 16px);
+    letter-spacing: -0.24px;
+  }
+
+  .footer__menu {
+    display: flex;
+    flex-direction: column;
+
+    ul {
+      margin-top: 20px;
+
+      li {
+        padding: 4px;
+        width: 100%;
+
+        a {
+          font-size: 14px;
+          display: inline-block;
+          width: 100%;
+          @include font($style: normal, $weight: 400, $size: 16px, $height: 18px);
+          letter-spacing: -0.28px;
+
+          &:hover {
+            color: #fff;
+          }
         }
-
-        a,
-        address {
-            font-size: 1.6rem;
-            font-weight: 700;
-            color: $color-light;
-            font-style: normal;
-        }
+      }
     }
 
-    .footer__menu {
+    &_btn {
+      margin-top: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+
+
+     .footer__link {
+        width: 100%;
         display: flex;
-        flex-direction: column;
+        padding: 6px 16px;
+        justify-content: center;
+        align-items: center;
+        gap: 6px;
+        align-self: stretch;
+        border-radius: 40px;
+        background: rgba(255, 255, 255, 0.05);
 
-        ul {
-            li {
-                margin-bottom: 20px;
-                a {
-                    font-size: 1.6rem;
-                    line-height: 120%;
-                    color: $color-light;
-                }
-            }
+       &:hover{
+         background: rgba(255, 255, 255, 0.2);
+         cursor: pointer;
+       }
+
+        & > a{
+          font-family: inter, serif;
+          color: white;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 20px;
+          letter-spacing: -0.32px;
         }
+      }
     }
+  }
 
 }
 
