--- a/#src/scss/base/header-navigation.scss
+++ b/#src/scss/base/header-navigation.scss
@@ -19,7 +19,7 @@
   }
 
   & > * {
-    padding: 40px 0;
+    padding: 20px 0;
     margin-left: 30px;
 
     &:first-child {
@@ -51,15 +51,16 @@
       display: inline-block;
       vertical-align: middle;
     }
+  }
 
-    @include hover {
-      &:hover {
-        background-color: black;
-        color: rgba(255, 255, 255, 0.90);
+  @include hover {
+    &:hover > span,
+    &:focus-within > span {
+      background-color: black;
+      color: rgba(255, 255, 255, 0.90);
 
-        &::after {
-          filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(1) contrast(1);
-        }
+      &::after {
+        filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(1) contrast(1);
       }
     }
   }
