feat: add contact popup

--- a/#src/components/base/_burger-menu.html
+++ b/#src/components/base/_burger-menu.html
@@ -38,6 +38,6 @@
         </div>
     </nav>
     <span class="horizontal-line"></span>
-    <a class="custom-button-brand" href="https://my.datahata.by/">Войти в аккаунт</a>
+    <a class="custom-button-brand custom-button-brand_brand" href="https://my.datahata.by/">Войти в аккаунт</a>
 </div>
 
