--- a/#src/components/layout/_header.html
+++ b/#src/components/layout/_header.html
@@ -44,7 +44,7 @@
             <button id="contact_btn" class="custom-button-circle">
                 <img src="img/icons/Phone.svg" alt="phone">
             </button>
-            <a class="custom-button-brand header-button" href="https://my.datahata.by/">Вход</a>
+            <a class="custom-button-brand custom-button-brand_brand header-button" href="https://my.datahata.by/">Вход</a>
             <button class="burger custom-button-circle"></button>
         </div>
         @@include('../base/_burger-menu.html')
