--- a/#src/scss/base/buttons.scss
+++ b/#src/scss/base/buttons.scss
@@ -1,4 +1,4 @@
-.button{
+.button {
   //border-radius: 16px; // prev style
   // padding: 14px 42px; // prev style
   padding: 24px 40px;
@@ -8,7 +8,7 @@
   @extend %transition;
 
 
-  &_outline{
+  &_outline {
     border: none;
     background-color: $color-light;
 
@@ -21,7 +21,7 @@
   }
 
 
-  &_bordered{
+  &_bordered {
     border: 1px solid transparent;
     @include background-bordered-btn();
     @include gradient;
@@ -32,7 +32,7 @@
       @include font($size: 1.8rem, $weight: 600);
 
 
-      @include hover{
+      @include hover {
         &:hover {
           background: transparent;
           color: $color-light;
@@ -40,28 +40,27 @@
       }
     }
 
-    @include hover{
+    @include hover {
       &:hover {
         @include gradient;
         box-shadow: none !important;
       }
     }
 
-    @include hover{
+    @include hover {
       &:hover span {
         color: $color-light;
       }
     }
 
 
-
   }
 
-  &_colored{
+  &_colored {
     @include gradient;
     @include font($size: 1.8rem, $weight: 600);
 
-    & > *{
+    & > * {
       // @include font($size: 1.6rem); // prev style
       @include font($size: 1.8rem, $weight: 600);
       color: $color-light;
@@ -69,11 +68,11 @@
   }
 
 
-  &_disabled{
+  &_disabled {
     background: $color-light-grey;
     pointer-events: none;
 
-    &>*{
+    & > * {
       // @include font($size: 1.6rem); // prev style
       @include font($size: 1.8rem, $weight: 600);
       color: $color-disabled;
@@ -83,17 +82,19 @@
 }
 
 
-.button-circle{
+.button-circle {
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 100%;
   width: 52px;
   height: 52px;
-  &_bordered{
+
+  &_bordered {
     border: 1px solid transparent;
     background: linear-gradient(0deg, $color-gradient-primary 0.08%, $color-gradient-secondary 155.74%);
     box-shadow: inset 0 0 0 100vw $color-light;
+
     span {
       @extend %gradient-text;
       @include font($size: 1.6rem);
@@ -103,9 +104,8 @@
 }
 
 
-
-.custom-button{
-  &-brand{
+.custom-button {
+  &-brand {
     display: flex;
     min-width: 120px;
     height: 40px;
@@ -113,10 +113,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 32px;
-    border: 1px solid  rgba(0, 0, 0, 0.10);
-    background:  $Surface-Gray-Shades-Brand-M;
-    box-shadow: 0 0 16px 4px rgba(0, 0, 0, 0.10) inset;
-    color: rgba(255, 255, 255, 0.90);
+
     font-variant-numeric: lining-nums proportional-nums;
     font-size: 18px;
     font-style: normal;
@@ -125,12 +122,32 @@
     letter-spacing: -0.36px;
     transition: all 0.2s;
 
-    &:hover{
-      background: #130FBF;
+
+    &_brand {
+      border: 1px solid rgba(0, 0, 0, 0.10);
+      background: $Surface-Gray-Shades-Brand-M;
+      box-shadow: 0 0 16px 4px rgba(0, 0, 0, 0.10) inset;
+      color: rgba(255, 255, 255, 0.90);
+
+      &:hover {
+        background: #130FBF;
+      }
     }
+
+    &_brand-s {
+      background: $Surface-Gray-Shades-Translucent-Brand-S;
+      color: $Surface-Gray-Shades-Brand-M;
+
+      &:hover {
+        background: #1914FE4D;
+      }
+    }
+
+
   }
 
-  &-circle{
+
+  &-circle {
     display: flex;
     width: 40px;
     height: 40px;
@@ -139,6 +156,10 @@
     align-items: center;
     border-radius: 32px;
     background: $Surface-Gray-Shades-Translucent-Brand-S;
+
+    &:hover {
+      background: #1914FE4D;
+    }
   }
 }
 
