feat: create calc, promo section

--- a/#src/components/layout/_header.html
+++ b/#src/components/layout/_header.html
@@ -19,6 +19,7 @@
                         <li><a class="menu-sub__link" href="dedicated.html">Аренда сервера</a></li>
                         <li><a class="menu-sub__link" href="software.html">Программное обеспечение</a></li>
                         <li><a class="menu-sub__link" href="email.html">HataMail</a></li>
+                        <li><a class="menu-sub__link" href="vps.html">VPS</a></li>
                         <li><a class="menu-sub__link" href="other.html">Другие услуги</a></li>
                     </ul>
                 </li>
