--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -19,6 +19,8 @@
 @import "./base/calculator";
 @import "./base/calculator-configurator";
 @import "./base/contactModal";
+@import "./base/customRange";
+@import "./base/customTabs";
 
 
 //layout
@@ -72,3 +74,5 @@
 @import "./components/error";
 @import "./components/success";
 
+//vps
+@import "./components/vps/vps";
