feat: vps form and faq section

--- a/#src/components/vps/_promo.html
+++ b/#src/components/vps/_promo.html
@@ -1,4 +1,4 @@
-<section class="vps__promo">
+<section class="vps__promo container">
     <h1>Виртуальный сервер <br/>
         VPS от datahata
     </h1>
