--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -21,6 +21,7 @@
 @import "./base/contactModal";
 @import "./base/customRange";
 @import "./base/customTabs";
+@import "./base/custom_acc";
 
 
 //layout
