--- a/#src/scss/base/customRange.scss
+++ b/#src/scss/base/customRange.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   gap: 1.6rem;
   width: 376px;
-  flex-grow: 1;
+  //flex-grow: 1;
 
   @media (max-width: 768px) {
     width: 400px;
