--- a/#src/scss/components/vps/vps.scss
+++ b/#src/scss/components/vps/vps.scss
@@ -94,8 +94,69 @@
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      gap: 6.4rem;
+      gap: 60px;
       width: 100%;
+    }
+  }
+
+  &__advantages{
+    height: 100%;
+    min-height: 1071px;
+    padding-top: 320px;
+    background-image: url("./../../../img/vps/Elipse-right.svg");
+    background-repeat: no-repeat;
+    background-position: center right;
+    background-size: contain;
+  }
+
+  &__company{
+    padding-top: 360px;
+  }
+
+  &__faq{
+    padding-top: 360px;
+  }
+
+  &__form{
+    padding-top: 220px;
+    background-image: url("./../../../img/vps/Elipse-left.svg");
+    background-repeat: no-repeat;
+    background-position: center left;
+    background-size: contain;
+  }
+
+  &__section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    & > h2{
+      color: rgba(0, 0, 0, 0.90);
+      text-align: center;
+      font-variant-numeric: lining-nums proportional-nums;
+      font-size: 80px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 100%;
+      letter-spacing: -1.6px;
+      margin-bottom: 16px;
+
+      & > span{
+      color: rgba(0, 0, 0, 0.30);
+      }
+    }
+
+    & > p{
+      max-width: 1100px;
+      color: #808080;
+      text-align: center;
+      font-variant-numeric: lining-nums proportional-nums;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 24px;
+      letter-spacing: -0.36px;
+      margin-bottom: 60px;
     }
   }
 }
