--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -14,14 +14,15 @@
 @import "./base/accordion";
 @import "./base/footer-navigation";
 @import "./base/header-navigation";
-@import "./base/contacts_nav";
+@import "./base/contacts-nav";
 @import "./base/table";
 @import "./base/calculator";
 @import "./base/calculator-configurator";
-@import "./base/contactModal";
-@import "./base/customRange";
-@import "./base/customTabs";
-@import "./base/custom_acc";
+@import "./base/contact-modal";
+@import "./base/custom-range";
+@import "./base/custom-tabs";
+@import "./base/custom-select";
+@import "./base/custom-accordion";
 
 
 //layout
