--- a/#src/components/vps/_FAQ.html
+++ b/#src/components/vps/_FAQ.html
@@ -14,11 +14,7 @@
                     </div>
                 </div>
                 <div class='ac-panel'>
-
-                    Для оформления заказа свяжитесь с нами через сайт или по телефону.
-                    Доставка осуществляется по договоренности, учитывая ваши
-                    предпочтения и местоположение
-
+                    <p>Сервер VPS создаeтся за минуту — вы сразу же можете приступить к его настройке и использованию.</p>
                 </div>
             </div>
             <div class='ac'>
@@ -28,9 +24,8 @@
                     </div>
                 </div>
                 <div class='ac-panel'>
-                    Для оформления заказа свяжитесь с нами через сайт или по телефону.
-                    Доставка осуществляется по договоренности, учитывая ваши
-                    предпочтения и местоположение
+                    <p>Для аренды VPS вам достаточно выбрать конфигурацию нужного VPS, вы будете перенаправлены в личный
+                    кабинет и ваш сервер будет готов к работе.</p>
                 </div>
             </div>
             <div class='ac'>
@@ -40,9 +35,37 @@
                     </div>
                 </div>
                 <div class='ac-panel'>
-                    Для оформления заказа свяжитесь с нами через сайт или по телефону.
-                    Доставка осуществляется по договоренности, учитывая ваши
-                    предпочтения и местоположение
+                    <p>Выбор между арендой VPS сервера и аренды собственного сервера зависит от бюджета, требований к
+                    ресурсам и уровня контроля.</p>
+
+                    <p>VPS сервер — это виртуализированный сервер на базе физического, разделенного на несколько
+                    изолированных виртуальных машин.</p>
+
+                    <ul>
+                        <li>Экономичность: VPS дешевле, вы платите только за необходимые ресурсы.</li>
+                        <li> Масштабируемость: Легко увеличивать или уменьшать ресурсы по мере необходимости.</li>
+                        <li>Простота управления: Удобные панели управления и поддержка от провайдера.</li>
+                        <li>Быстрое развертывание: Настройка и запуск занимают считанные минуты.</li>
+                    </ul>
+
+                    <p>Аренда собственного сервера</p>
+
+                    <p>Собственный сервер (Dedicated Server) — это физический сервер, полностью арендованный одной
+                    организацией.</p>
+
+                    <ul>
+                        <li>Полный контроль: Полный доступ к аппаратным ресурсам и настройкам.</li>
+                        <li>Высокая производительность: Все ресурсы сервера полностью ваши.</li>
+                        <li>Безопасность и изоляция: Высокий уровень безопасности и изоляции.</li>
+                    </ul>
+
+
+                    <p>Аренда VPS сервера подходит для небольших и средних проектов, которым важны гибкость и
+                    экономичность. Аренда собственного сервера — для крупных проектов с высокими требованиями к ресурсам
+                    и безопасности.</p>
+
+                    <p>Наша компания предлагает аренду VPS серверов с различными конфигурациями и поддержкой, а также
+                    <a href="https://www.datahata.by/services/dedicated/">аренду собственного сервера</a>. Обратитесь к нам для выбора оптимального варианта под ваши потребности.</p>
                 </div>
             </div>
             <div class='ac'>
@@ -52,9 +75,15 @@
                     </div>
                 </div>
                 <div class='ac-panel'>
-                    Для оформления заказа свяжитесь с нами через сайт или по телефону.
-                    Доставка осуществляется по договоренности, учитывая ваши
-                    предпочтения и местоположение
+                    При выборе хостинга для вашего проекта, вы наверняка столкнетесь с такими терминами, как VPS и VDS.
+                    VDS, или виртуальный выделенный сервер, по сути, является другим названием VPS. И VPS, и VDS
+                    предоставляют пользователям возможность управлять серверными ресурсами и обеспечивают гибкость и
+                    контроль над серверной средой.
+
+                    Если вы ищете аренду VPS сервера в Беларуси, наша компания готова предложить вам оптимальные
+                    решения, соответствующие вашим потребностям и бюджету. Обратитесь к нам для получения дополнительной
+                    информации и консультации по выбору подходящего варианта.
+
                 </div>
             </div>
             <div class='ac'>
@@ -64,10 +93,10 @@
                     </div>
                 </div>
                 <div class='ac-panel'>
-                    Для оформления заказа свяжитесь с нами через сайт или по телефону.
-                    Доставка осуществляется по договоренности, учитывая ваши
-                    предпочтения и местоположение
-
+                    В нашем собственном дата-центре datahata.by в Республике Беларусь. Дата-центр расположен на
+                    цокольном уровне в охраняемом здании, что обеспечивает дополнительный уровень безопасности и защиты
+                    от несанкционированного проникновения. Совместно с нашими клиентами мы прошли сертификацию по
+                    стандарту безопасности PCI-DSS.
                 </div>
             </div>
 
