--- a/#src/components/vps/_calculator.html
+++ b/#src/components/vps/_calculator.html
@@ -1,2 +1,4 @@
-<div class="vps__calculator container"></div>
+<div class="vps__custom-calculator container">
+    <div class="vps__calculator"></div>
+</div>
 
