--- a/#src/scss/base/custom-accordion.scss
+++ b/#src/scss/base/custom-accordion.scss
@@ -74,6 +74,15 @@
   line-height: 24px;
   letter-spacing: -0.36px;
 
+
+  & > p, ul{
+    margin-bottom: 8px;
+  }
+
+  & > ul > li{
+    list-style: inside;
+  }
+
 }
 
 
