--- a/#src/scss/base/custom-range.scss
+++ b/#src/scss/base/custom-range.scss
@@ -3,7 +3,9 @@
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
-  width: 376px;
+  flex-shrink: 0;
+
+
   //flex-grow: 1;
 
   @media (max-width: 768px) {
@@ -14,7 +16,7 @@
     width: 300px;
   }
 
-  &__label{
+  &__label {
     display: flex;
     align-items: center;
     gap: 0.2rem;
@@ -42,8 +44,9 @@
 
   &__slider {
     position: relative;
+    width: 376px;
 
-    &-track{
+    &-track {
       z-index: 1;
       position: absolute;
       top: 50%;
@@ -53,7 +56,7 @@
       background: rgba(0, 0, 0, 0.1);
     }
 
-    &-progress{
+    &-progress {
       position: absolute;
       z-index: 1;
       top: 50%;
@@ -63,7 +66,7 @@
       background-color: transparent;
       overflow: hidden;
 
-      & > .fill{
+      & > .fill {
         display: block;
         width: 0;
         height: 3px;
@@ -71,7 +74,7 @@
       }
     }
 
-    &-input{
+    &-input {
       position: absolute;
       z-index: 4;
       -webkit-appearance: none;
@@ -103,7 +106,7 @@
 
   }
 
-  &__ticks{
+  &__ticks {
     position: absolute;
     display: flex;
     justify-content: space-between;
@@ -112,7 +115,7 @@
     transform: translateY(-50%);
     z-index: 2;
 
-    & > span{
+    & > span {
       display: flex;
       justify-content: center;
       border-radius: 17px;
