feat: create advantages section

--- a/#src/components/vps/_calculator.html
+++ b/#src/components/vps/_calculator.html
@@ -1,4 +1,4 @@
-<div class="vps__custom-calculator container">
+<div id="vps-calculator" class="vps__custom-calculator container">
     <div class="vps__calculator"></div>
 </div>
 
