feat: add adaptive

--- a/#src/components/vps/_FAQ.html
+++ b/#src/components/vps/_FAQ.html
@@ -10,7 +10,7 @@
             <div class='ac'>
                 <div class='ac-header'>
                     <div class='ac-trigger'>
-                        В течение какого срока активируется услуга?
+                        <p>В течение какого срока активируется услуга?</p>
                     </div>
                 </div>
                 <div class='ac-panel'>
@@ -20,7 +20,7 @@
             <div class='ac'>
                 <div class='ac-header'>
                     <div class='ac-trigger'>
-                        Как арендовать VPS сервер?
+                        <p>Как арендовать VPS сервер?</p>
                     </div>
                 </div>
                 <div class='ac-panel'>
@@ -31,7 +31,7 @@
             <div class='ac'>
                 <div class='ac-header'>
                     <div class='ac-trigger'>
-                        Чем отличается аренда VPS сервера от аренды собственного сервера?
+                        <p>Чем отличается аренда VPS сервера от аренды собственного сервера?</p>
                     </div>
                 </div>
                 <div class='ac-panel'>
@@ -71,7 +71,7 @@
             <div class='ac'>
                 <div class='ac-header'>
                     <div class='ac-trigger'>
-                        В чем разница между VPS и VDS?
+                        <p>В чем разница между VPS и VDS?</p>
                     </div>
                 </div>
                 <div class='ac-panel'>
@@ -89,7 +89,7 @@
             <div class='ac'>
                 <div class='ac-header'>
                     <div class='ac-trigger'>
-                        В каком дата-центре будет хранится мой сервер?
+                        <p>В каком дата-центре будет хранится мой сервер?</p>
                     </div>
                 </div>
                 <div class='ac-panel'>
