--- a/#src/scss/base/custom-tabs.scss
+++ b/#src/scss/base/custom-tabs.scss
@@ -2,8 +2,11 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  //flex-grow: 1;
   width: 376px;
+
+  @media (max-width: 640px) {
+    width: 296px;
+  }
 
   &__container {
     width: 100%;
@@ -33,13 +36,16 @@
       gap: 4px;
       border: 1px solid transparent;
       color: rgba(0, 0, 0, 0.3);
-      font-variant-numeric: lining-nums proportional-nums;
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 20px;
+      @include font($weight: 400, $size: 16px, $height: 20px);
       letter-spacing: -0.32px;
       cursor: pointer;
+
+      @media (max-width: 1024px) {
+        padding: 4px 5px;
+        text-align: center;
+        height: 36px;
+        @include font($weight: 400, $size: 12px, $height: 16px);
+      }
 
       & > input[type='radio'] {
         visibility: hidden;
