--- a/#src/scss/base/custom-range.scss
+++ b/#src/scss/base/custom-range.scss
@@ -5,17 +5,6 @@
   gap: 1.6rem;
   flex-shrink: 0;
 
-
-  //flex-grow: 1;
-
-  @media (max-width: 768px) {
-    width: 400px;
-  }
-
-  @media (max-width: 420px) {
-    width: 300px;
-  }
-
   &__label {
     display: flex;
     align-items: center;
@@ -24,12 +13,12 @@
 
     & > p {
       color: rgba(0, 0, 0, 0.9);
-      font-variant-numeric: lining-nums proportional-nums;
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 20px;
+      @include font($weight: 400, $size: 16px, $height: 20px);
       letter-spacing: -0.32px;
+
+      @media (max-width: 640px) {
+        @include font($weight: 400, $size: 14px, $height: 18px);
+      }
     }
 
     & > .label {
@@ -45,6 +34,10 @@
   &__slider {
     position: relative;
     width: 376px;
+
+    @media (max-width: 640px) {
+      width: 296px;
+    }
 
     &-track {
       z-index: 1;
