--- a/#src/scss/base/custom-select.scss
+++ b/#src/scss/base/custom-select.scss
@@ -5,6 +5,10 @@
   flex-direction: column;
   gap: 8px;
 
+  @media (max-width: 640px) {
+    width: 296px;
+  }
+
   & > label{
     display: flex;
     align-items: center;
